# DICOMViewer

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
